# SIDMkit_pipeline

./: .gitignore  RUNBOOK.md
code/sidmkit/: pyproject.toml
code/sidmkit/outputs/sparc_chunks/chunk_0/: chunk_stats.json  summary.csv  summary.json
code/sidmkit/outputs/sparc_chunks/chunk_0/fits/: NGC2685.json  NGC2824.json  NGC2859.json  NGC2974.json  NGC3522.json  NGC3626.json  NGC3838.json  NGC3941.json  NGC3945.json  NGC3998.json  NGC4203.json  NGC4262.json  NGC4278.json  NGC5582.json  NGC6798.json  UGC6176.json
outputs/sparc_chunks/chunk_0/: chunk_stats.json  summary.json
outputs/sparc_chunks/chunk_100/: summary.json
outputs/sparc_chunks/chunk_125/: chunk_stats.json  summary.csv
outputs/sparc_chunks/chunk_150/: chunk_stats.json  summary.json
outputs/sparc_chunks/chunk_175/: chunk_stats.json  summary.csv
outputs/sparc_chunks/chunk_25/: summary.csv  summary.json
outputs/sparc_chunks/chunk_50/: summary.json
outputs/sparc_noplots/: chunk_stats.json  summary.csv
outputs/sparc_noplots/fits/: CamB.json  D512-2.json  DDO154.json  DDO168.json  ESO079-G014.json  ESO116-G012.json  F561-1.json  F563-V1.json  F563-V2.json  F568-1.json  F568-3.json  F568-V1.json  F574-2.json  IC2574.json  IC4202.json  NGC0289.json  NGC1705.json  NGC2366.json  NGC2403.json  NGC2685.json  NGC2859.json  NGC2903.json  NGC2915.json  NGC2974.json  NGC2998.json  NGC3521.json  (+57 more)
paper/: Makefile  sidmkit_sparc_submission.aux  sidmkit_sparc_submission.out  sidmkit_sparc_submission.tex
results/: README_results.md
results/outputs/: sparc_all_summary.json
sparc_data/: sparc_batch.py
(+314 files in other folders)
